--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -1,1 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+* {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: 0;
+  font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
+}
+
+
+
+
+
+
+
+/* -------------------NAVEBAR----------------------- */
+
+.nav_container {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 2%;
+    box-shadow: 0 1px 10px -3px black;
+    position: fixed;
+    z-index: 40;
+  }
+  
+  .search_container {
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    width: 50%;
+  }
+  
+  .nav_container .site-logo {
+    padding-top: 0.4rem;
+    width: 4rem;
+  }
+  
+  .search_container input {
+    background: transparent;
+    color: var(--color-white);
+    width: 100%;
+  }
+  
+  .nav_container .notification_plus_login {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .profile {
+    width: 3rem;
+    border-radius: 25rem;
+    cursor: pointer;
+  }
+  
+  .icon {
+    color: var(--color-icon);
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  
+  .notification {
+    position: relative;
+  }
+  
+  .notification:before {
+    content: '';
+    position: absolute;
+    background: var(--color-white);
+    padding: 4.5px;
+    border-radius: 25rem;
+    right: 1px;
+  }
+  
+  .sidebar_logo {
+    display: flex;
+    align-items: center;
+    gap: 1.3rem;
+  }
+  
+  .sidebar_logo .bar-icon {
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--color-icon);
+  }
