--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -20,7 +20,7 @@
 
 .btn {
     padding: 0.7rem 3rem;
-    border-radius: 5px;
+    border-radius: 0.7rem;
     background: var(--color-blue);
     color: var(--color-white);
     font-size: 1rem;
@@ -403,6 +403,39 @@ a {
 
 .booking-card ul li p:last-child {
   font-weight: 500;
+}
+
+
+.amenities{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.amenities .row {
+  display: flex;
+  gap: 5rem;
+}
+
+.amenities .row .col {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.amenities .col li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.amenities .col li img{
+   width: 2rem;
+}
+
+@media(max-width:800px){
+  .about-room-container{
+    grid-template-columns: 1fr;
+  }
 }
 
 
