--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -275,7 +275,7 @@ a {
       .rooms-container h1 {
         font-size: 1.8rem;
       }
-      .card {
+      .rooms-container .card {
         display: grid !important;
         grid-template-columns: 1fr 1fr;
       }
@@ -406,7 +406,12 @@ a {
 }
 
 
-.amenities{
+/* .amenities-rationg-other-details {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+} */
+
+.amenities,.rating-reviews{
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -432,11 +437,96 @@ a {
    width: 2rem;
 }
 
+.rating-reviews .rate {
+  flex-direction: row;
+}
+
+.rating-reviews ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.grids {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.rating-reviews ul li {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.rating-reviews ul li span {
+  width: 100%;
+  display: flex;
+  height: 5px;
+  border-radius: 1rem;
+  color: transparent;
+  background: #ddddddc3;
+  position: relative;
+}
+
+.rating-reviews ul li span::before {
+  content: '';
+  position: absolute;
+  width: 72%;
+  height: 5px;
+  background: var(--color-blue);
+  border-radius: 1rem;
+}
+
+.rating-reviews ul li .four-star::before{
+  width: 32%;
+}
+.rating-reviews ul li .three-star::before{
+  width: 22%;
+}
+.rating-reviews ul li .two-star::before{
+  width: 12%;
+}
+.rating-reviews ul li .one-star::before{
+  width: 5%;
+}
+
 @media(max-width:800px){
   .about-room-container{
     grid-template-columns: 1fr;
   }
+  .grids {
+    grid-template-columns: 1fr;
+  }
 }
+
+
+
+
+/* ===================listofrooms===================================== */
+
+
+.recommented-rooms img {
+  width: 100%;
+  border-radius: 0.5rem;
+}
+
+.recommented-rooms {
+  padding: 1rem 0 3rem !important;
+}
+
+.recommented-rooms .room-card {
+  padding: 0.6rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 20px rgba(0,0,0,0.15);
+}
+
+.recommented-rooms .card {
+  flex-direction: column !important;
+}
+
+
 
 
 
