--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -121,6 +121,81 @@ a {
   }
 
 
+  .signin-signup {
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  .signin-signup .btn {
+    font-size: 0.8rem;
+    padding: 0.7rem 2rem;
+  }
+
+
+
+
+
+
+
+
+  /* =======================Sign-Up=================================== */
+
+  .overlay {
+    width: 100%;
+    height: 100vh;
+    background: #00000077;
+    position: absolute;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .overlay .form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background: var(--color-white);
+    padding: 1rem;
+    border-radius: 1rem;
+    width: 400px;
+  }
+
+  .overlay form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  form input {
+    border: 2px solid #197cf54d;
+    padding: 0.5rem;
+    width: 100%;
+    border-radius: 0.5rem;
+  }
+
+  form input:focus {
+    box-shadow: 0 0 0px 3px #197cf54d;
+    border: 2px solid var(--color-blue);
+  }
+
+  .overlay h2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .overlay .close-icon {
+    font-size: 2.5rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+  }
+
+  .overlay .close-icon:hover {
+    background: #f49d9d;
+  }
+
+
 
 /* 
   =============================home======================= */
@@ -505,7 +580,9 @@ a {
 
 
 /* ===================listofrooms===================================== */
-
+.recommented-rooms-container {
+  margin-top: 3rem;
+}
 
 .recommented-rooms img {
   width: 100%;
@@ -513,13 +590,21 @@ a {
 }
 
 .recommented-rooms {
-  padding: 1rem 0 3rem !important;
+  padding: 1rem 0.5rem 3rem 0.5rem !important;
 }
 
 .recommented-rooms .room-card {
   padding: 0.6rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 20px rgba(0,0,0,0.15);
+  border: 1px solid transparent;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.recommented-rooms .room-card:hover {
+  box-shadow: 0 0 20px rgba(0,0,0,0.30);
+    border: 1px solid var(--color-blue);
 }
 
 .recommented-rooms .card {
