--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -143,7 +143,7 @@ a {
   .overlay {
     width: 100%;
     height: 100vh;
-    background: #00000077;
+    background: #00000090;
     position: absolute;
     position: fixed;
     display: flex;
@@ -159,6 +159,9 @@ a {
     padding: 1rem;
     border-radius: 1rem;
     width: 400px;
+    transition: 0.8s ease-out;
+    transform: translateY(20%);
+    opacity: 0;
   }
 
   .overlay form {
@@ -195,13 +198,30 @@ a {
     background: #f49d9d;
   }
 
+  .form-container .btn {
+    margin-top: 0.5rem;
+  }
+
+  .form-container button {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: center;
+    background: #ddd;
+    color: var(--color-black);
+  }
+
+  .form-container button:hover {
+    background: #8787878c;
+  }
+
 
 
 /* 
   =============================home======================= */
 
   .home-container {
-    padding: 5.5rem 1rem 1rem 1rem;
+    padding: 4rem 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -379,7 +399,7 @@ a {
 /*   =====================room-details================================ */
 
 .room-details-container {
-    padding: 6rem 1rem 1rem 1rem;
+    padding: 4.5rem 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
