--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -169,12 +169,12 @@ a {
   .overlay form {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
   }
 
   form input {
     border: 2px solid #197cf54d;
-    padding: 0.5rem;
+    padding: 0.8rem;
     width: 100%;
     border-radius: 0.5rem;
   }
@@ -224,6 +224,25 @@ a {
     border-radius: 4px;
     font-weight: 500;
     color: var(--color-white);
+  }
+
+  .input-box {
+    position: relative;
+    width: 100%;
+  }
+
+  .input-box label {
+    position: absolute;
+    top: 50%;
+    background: var(--color-white);
+    padding: 0 0.2rem;
+    color: #197cf59e;
+    left: 3%;
+    transform: translateY(-50%);
+    font-size: 0.8rem;
+    pointer-events: none;
+    border-radius: 5px;
+    transition: 0.4s;
   }
 
 
