--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -70,7 +70,7 @@ a {
     width: 50%;
   }
   
-  .nav_container .site-logo {
+  .site-logo {
     padding-top: 0.4rem;
     width: 4rem;
   }
@@ -131,6 +131,104 @@ a {
     font-size: 0.8rem;
     padding: 0.7rem 2rem;
   }
+
+
+
+
+
+
+
+
+ /*  =======================sidebar================================ */
+
+ .main-container {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background: #34343484;
+  z-index: 100;
+  position: fixed;
+  display: none;
+  transition: 0.4s;
+  margin-top: -1.5rem;
+}
+
+/* .empty-container {
+  width: 100%;
+} */
+
+.sideBar-container {
+  width: 350px;
+  height: 100vh;
+  background: var(--color-white);
+  color: var(--color-black);
+  padding: 1rem;
+  transition: 0.4s;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  transform: translateX(-200%);
+}
+
+.child-container {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.child-container::-webkit-scrollbar {
+  display: none;
+}
+
+.close-icon-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.close-icon-div .close-icon {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.close-icon:hover {
+  background: #ddd;
+}
+
+.sideBar-container ul {
+  list-style: none;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.sideBar-container ul li {
+  font-size: 1.2rem;
+  height: 2.5rem;
+  padding: 1.5rem 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+  transition: 0.2s ease;
+  color: var(--color-black);
+  border-left: 4px solid transparent;
+}
+
+.sideBar-container ul li:hover {
+  background: #dddddd82;
+  border-left: 4px solid var(--color-blue);
+  font-size: 1.1rem;
+  color: var(--color-blue);
+}
+
+.sideBar-container hr {
+  height: 0.1rem;
+  background-color: #ddd;
+}
 
 
 
