--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -57,6 +57,7 @@ a {
   box-shadow: 0 1px 10px -5px #000;
   position: fixed;
   z-index: 40;
+  gap: 1rem;
   background: var(--color-white);
 }
 
@@ -230,6 +231,23 @@ a {
   background-color: #ddd;
 }
 
+.sideBar-container .signin-signup {
+  flex-direction: column;
+}
+
+
+@media(max-width: 800px){
+  .nav_container .signin-signup{
+    display: none;
+  }
+  .sideBar-container {
+    width: 300px;
+  }
+  .search_container {
+    width: 100%;
+  }
+}
+
 
 
 
@@ -250,6 +268,7 @@ a {
   justify-content: center;
   z-index: 1000;
   margin-top: -1.5rem;
+  padding: 0 1rem;
 }
 
 .overlay .form-container {
@@ -540,6 +559,10 @@ form input:focus {
   .card li .icon {
     font-size: 1rem !important;
   }
+  .rooms-container .cards-container {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
 }
 
 
@@ -633,7 +656,7 @@ form input:focus {
   display: flex;
   gap: 1rem;
   border: 2px solid #ddd;
-  padding: 1rem;
+  padding: 1rem 0;
   border-radius: 1rem;
 }
 
@@ -701,6 +724,7 @@ form input:focus {
   display: flex;
   align-items: center;
   gap: 1rem;
+  color: var(--color-black);
 }
 
 .amenities .col li img {
@@ -775,8 +799,21 @@ form input:focus {
   }
 
   .arrow {
-    padding: 0.4rem !important;
-    font-size: 1.5rem !important;
+    padding: 0.5rem !important;
+    font-size: 1.8rem !important;
+  }
+  .room-details-container h1 {
+    font-size: 1.5rem;
+  }
+  .room-details-container .rooms-iamge-field {
+    grid-template-columns: 1fr;
+  }
+  .rooms-iamge-field .image-right-field {
+    gap: 0.5rem;
+    border-radius: 0;
+  }
+  .rooms-iamge-field .image-left-field {
+    border-radius: 0;
   }
 }
 
@@ -861,6 +898,7 @@ form input:focus {
 .error-page .btn {
   position: absolute;
   bottom: 1rem;
+  transform: translate(-50%);
 }
 
 .error-page h1 {
