--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -315,7 +315,7 @@ form input:focus {
 }
 
 .overlay .close-icon:hover {
-  background: #f49d9d;
+  background: #f49d9d61;
 }
 
 .form-container .btn {
@@ -337,11 +337,16 @@ form input:focus {
 
 .form_error-message {
   font-size: 0.8rem;
-  background: #f21331a7;
+  /* background: #f21331a7; */
+  color: #f21;
   padding: 5px;
-  border-radius: 4px;
+  border-radius: 8px;
   font-weight: 500;
-  color: var(--color-white);
+  border: 2px solid #f2133199;
+  box-shadow: 0 0 0 3px #f213312f;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .input-box {
