--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -144,7 +144,7 @@ a {
 
 .main-container {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   position: absolute;
   background: #34343484;
   z-index: 100;
@@ -160,7 +160,7 @@ a {
 
 .sideBar-container {
   width: 350px;
-  height: 100vh;
+  height: 110vh;
   background: var(--color-white);
   color: var(--color-black);
   padding: 1rem;
@@ -290,14 +290,14 @@ a {
   gap: 1rem;
 }
 
-form input {
+form input,textarea {
   border: 2px solid #197cf54d;
   padding: 0.8rem;
   width: 100%;
   border-radius: 0.5rem;
 }
 
-form input:focus {
+form input:focus,textarea:focus {
   box-shadow: 0 0 0px 3px #197cf54d;
   border: 2px solid var(--color-blue);
 }
@@ -587,7 +587,7 @@ form input:focus {
 /*   =====================room-details================================ */
 
 .room-details-container {
-  padding: 4.5rem 1rem 1rem 1rem;
+  padding: 5.5rem 1rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -892,17 +892,119 @@ form input:focus {
 /* ========================add-room========================== */
 
 .add-room-container {
-    padding: 4rem 1rem 1rem 1rem;
+    padding: 5.5rem 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1rem;
 }
 
 .add-room-container form {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
+}
+.add-room-container form .row{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 1rem;
 }
+
+.add-room-container .row .col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  width: 100%;
+}
+
+.add-room-container .col textarea {
+  width: 100%;
+  resize: none;
+  height: 9rem;
+}
+
+.add-room-container .col label {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.add-room-container .col label input{
+  width: 1rem;
+  cursor: pointer;
+}
+
+.add-room-container .text-field label {
+  flex-direction: column;
+  align-items: start;
+  gap: 8px;
+}
+
+.add-room-container .text-field label input {
+  width: 100%;
+}
+
+.add-room-container .btn {
+  width: 20rem;
+}
+
+
+
+
+.custom-file-upload {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 16px;
+  border: 2px solid #007bff;
+  padding: 20px;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 20rem;
+}
+
+.custom-file-upload h3 {
+  margin-bottom: 1rem;
+}
+
+.file-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 100px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.selected-images {
+  margin-top: 20px;
+}
+
+.selected-images h4 {
+  margin-bottom: 10px;
+}
+
+.selected-images ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.selected-images ul li {
+  margin-bottom: 5px;
+}
+
 
 
 
