--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -45,6 +45,39 @@ a {
 
 
 
+/* ---------------spinner--------------------------- */
+
+.spinner-field {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background: #fffdfd;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
+
+
 
 /* -------------------NAVEBAR----------------------- */
 
