--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -1136,6 +1136,63 @@ form input:focus,textarea:focus {
 
 
 
+/* =======================dashboard=============================== */
+
+.dashboard-container {
+  padding: 5.5rem 1rem 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.booked-rooms {
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(500px,1fr));
+  gap: 1rem;
+}
+
+.booked-rooms h2 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.booked-rooms p {
+  color: var(--color-blue);
+}
+
+.booked-rooms .card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.booked-rooms .card img{
+  width: 100%;
+  border-radius: 0.5rem;
+}
+
+.booked-rooms button {
+  padding: 5px 1rem;
+  border-radius: 5px;
+  background: #05ea7fa6;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ---------------------footer----------------------- */
 
 
