--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -126,6 +126,9 @@ a {
   width: 3rem;
   border-radius: 25rem;
   cursor: pointer;
+  border: 1px solid var(--color-white);
+  box-shadow: 0 0 0 4px #0000001f;
+  margin-right: 5px;
 }
 
 .icon {
@@ -166,6 +169,42 @@ a {
 .log {
   font-size: 0.8rem;
   padding: 0.7rem 2rem;
+}
+
+.profile-field , .profile-field p {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  position: relative;
+  cursor: pointer;
+}
+
+.logout-container {
+  position: absolute;
+  background: var(--color-white);
+  box-shadow: 2px 2px 10px -3px #00000056;
+  width: 8rem;
+  height: 5.2rem;
+  border-radius: 0.5rem;
+  top: 3.5rem;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  display: none;
+}
+
+.logout-container button {
+  width: 100%;
+  padding: 0.7rem;
+  cursor: pointer;
+  background: var(--color-white);
+  color: var(--color-black);
+}
+
+.logout-container button:hover {
+  background: #007bff;
+  color: var(--color-white);
 }
 
 
@@ -230,7 +269,7 @@ a {
 }
 
 .close-icon:hover {
-  background: #ddd;
+  background: #e9f0fb;
 }
 
 .sideBar-container ul {
@@ -255,10 +294,10 @@ a {
 }
 
 .sideBar-container ul li:hover {
-  background: #dddddd82;
-  border-left: 4px solid var(--color-blue);
+  background: #e9f0fb;
+  border-left: 4px solid #0b26f3;
   font-size: 1.1rem;
-  color: var(--color-blue);
+  color: #0b26f3;
 }
 
 .sideBar-container hr {
@@ -1070,6 +1109,12 @@ form input:focus,textarea:focus {
 }
 
 
+
+@media(max-width:700px){
+  .add-room-container form .row{
+    grid-template-columns: 1fr;
+  }
+}
 
 
 
