--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -1005,7 +1005,7 @@ form input:focus,textarea:focus {
 /* ========================add-room========================== */
 
 .add-room-container {
-    padding: 5.5rem 1rem 1rem 1rem;
+    padding: 6.5rem 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -1242,6 +1242,18 @@ form input:focus,textarea:focus {
   background: #05ea7fa6;
 }
 
+
+.edit-delete-buttons-field {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.edit-delete-buttons-field button {
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  padding: 0.7rem 1.3rem !important;
+}
 
 
 
