--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -1219,6 +1219,12 @@ form input:focus,textarea:focus {
 
 .booked-rooms p {
   color: var(--color-blue);
+  font-size: 1.2rem !important;
+}
+
+.booked-rooms h5 {
+  color: var(--color-yellow);
+  font-weight: 500;
 }
 
 .booked-rooms .card {
