--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -117,6 +117,17 @@ a {
   width: 50%;
 }
 
+.nav_logo {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.nav_logo .logo-text {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
 .site-logo {
   padding-top: 0.4rem;
   width: 4rem;
