--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -1349,6 +1349,104 @@ textarea:focus {
 
 
 
+/* ===========================proflie================================== */
+
+
+/* -----------------------profile------------------------- */
+
+
+.profile-container {
+  display: flex;
+  padding: 1rem;
+  flex-direction: column;
+  gap: 1rem;
+  width: 80%;
+  margin-inline: auto;
+}
+
+.profile-container .profile-field {
+  background: var(--color-white);
+  width: 100%;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  border:4px solid #eee;
+}
+
+.profile-container .profile-banner {
+  border-radius: 1rem 1rem 0 0;
+  position: relative;
+  width: 100%;
+  height: 14rem;
+  display: flex;
+}
+
+.profile-banner .banner-image {
+  width: 100%;
+  position: absolute;
+  height: 14rem;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.profile-banner .profile-image {
+  position: absolute;
+  bottom: -7rem;
+  border-radius: 50%;
+  left: 2rem;
+  width: 13rem;
+  border: 0.5rem solid var(--color-white);
+  height: 13rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-white);
+}
+
+.profile-image img {
+  width: 100%;
+}
+
+.profile-container .short-info {
+  margin-top: 2rem;
+  padding: 0 0 1rem 2rem;
+  flex-direction: column;
+  display: flex;
+  gap: 0.3rem;
+  width: 100%;
+}
+
+.profile-container .short-info span {
+  display: flex;
+  gap: 1rem;
+}
+
+.profile-container-field .dashboard-container {
+  width: 80%;
+  margin-inline: auto;
+}
+
+
+
+
+
+@media(max-width:900px) {
+  .profile-container {
+    width: 100%;
+  }
+  .profile-container-field .dashboard-container {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+
+
+
 
 
 
