--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -817,6 +817,139 @@ textarea:focus {
   border-right: 2px solid #ddd;
 }
 
+
+.payment-options {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  border: 2px solid #ccc;
+  border-radius: 1rem;
+  overflow: hidden;
+  margin-bottom: 1rem;
+}
+
+.g-pay {
+  width: 3rem;
+}
+
+label .icon {
+  font-size: 2.4rem;
+  color: #0d037b;
+}
+
+.payment-options label {
+  display: block;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem;
+}
+
+.payment-options label:hover {
+  background-color: #eee;
+  cursor: pointer;
+}
+
+.payment-options label:first-child {
+  border-right: 2px solid #ccc;
+}
+
+.payment-options label input {
+  visibility: hidden;
+}
+
+.payment-google-pay img {
+  width: 150px;
+  margin-top: 10px;
+}
+
+.payment-google-pay {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.book-btn {
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.payment-card-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
+.pay-icons {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.pay-icons img {
+  width: 3rem;
+}
+
+.payment-card-form input {
+  width: 100%;
+  margin: 5px 0;
+  padding: 0.6rem;
+  font-size: 1rem;
+  border: 2px solid #e4e4e4;
+  border-radius: 0.5rem;
+}
+
+.d-field {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 400px;
+}
+
+.modal-content h2 {
+  color: green;
+}
+
+.modal-content button {
+  padding: 10px 20px;
+  border: none;
+  background: green;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.modal-content button:hover {
+  background: darkgreen;
+}
+
+
 @media(max-width:450px) {
   .booking-card .dates-field {
     flex-direction: column;
