--- a/hotel/src/index.css
+++ b/hotel/src/index.css
@@ -1583,6 +1583,47 @@ label .icon {
 
 
 
+/* -----------------search---------------------- */
+
+
+.search-container {
+  padding: 2rem;
+  padding-top: 7rem;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.search-bar input {
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.search-bar button {
+  padding: 0.5rem 1rem;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.search-bar button:hover {
+  background-color: #0056b3;
+}
+
+
+
+
+
+
+
+
 
 /* ---------------------footer----------------------- */
 
